[gd_scene load_steps=7 format=2]

[ext_resource path="res://gameplay/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/interface/Interface.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/world/SpawnPoint.gd" type="Script" id=4]
[ext_resource path="res://gameplay/world/World.gd" type="Script" id=5]
[ext_resource path="res://gameplay/world/SpawnStrategy.gd" type="Script" id=6]
[ext_resource path="res://gameplay/world/Camera2D.gd" type="Script" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="SpawnPoint" type="Node" parent="."]
script = ExtResource( 4 )

[node name="SpawnStrategy" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Enemies" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Player/Camera2D"]

[node name="CanvasInterface" type="CanvasLayer" parent="."]

[node name="Interface" parent="CanvasInterface" instance=ExtResource( 2 )]
